fix: secrets cannot be referenced in if conditions in reusable workflows
Secrets are opaque in reusable workflows - you can't test them in 'if'
conditions. Instead, all publish steps run with continue-on-error: true.
If the secret is missing, the step fails gracefully and continues.

--- a/.github/workflows/release-reusable.yml
+++ b/.github/workflows/release-reusable.yml
@@ -351,7 +351,7 @@ jobs:
           fi
 
       - name: Publish to npm
-        if: secrets.NPM_TOKEN != ''
+        if: true  # publishes to npm if NPM_TOKEN secret exists
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npm publish --access public
@@ -381,7 +381,7 @@ jobs:
           deno-version: v2.x
 
       - name: Publish to JSR
-        if: secrets.JSR_TOKEN != ''
+        if: true  # publishes to JSR if JSR_TOKEN secret exists
         env:
           JSR_TOKEN: ${{ secrets.JSR_TOKEN }}
         run: deno publish --token="$JSR_TOKEN"
@@ -399,7 +399,7 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
 
       - name: Publish to crates.io
-        if: secrets.CARGO_TOKEN != ''
+        if: true  # publishes to crates.io if CARGO_TOKEN secret exists
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_TOKEN }}
         run: cargo publish --allow-dirty
@@ -415,7 +415,7 @@ jobs:
           ref: v${{ needs.prepare.outputs.new_version }}
 
       - name: Login to Docker Hub
-        if: secrets.DOCKERHUB_USERNAME != '' && secrets.DOCKERHUB_TOKEN != ''
+        if: true  # publishes to Docker Hub if secrets exist
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -453,13 +453,13 @@ jobs:
         run: npm ci || npm install
 
       - name: Publish to VS Code Marketplace
-        if: secrets.VSCE_PAT != ''
+        if: true  # publishes to VS Code Marketplace if VSCE_PAT exists
         run: |
           npx vsce publish -p "${{ secrets.VSCE_PAT }}"
         continue-on-error: true
 
       - name: Publish to Open VSX
-        if: secrets.OVSX_PAT != ''
+        if: true  # publishes to Open VSX if OVSX_PAT exists
         run: |
           npx ovsx publish -p "${{ secrets.OVSX_PAT }}"
         continue-on-error: true
