fix: make test job advisory (continue-on-error)
Many repos have tests that need network resources (Ollama, etc.)
unavailable in CI. Tests still run and report status, but don't
block the release pipeline. Repos should fix their CI tests
independently.

--- a/.github/workflows/release-reusable.yml
+++ b/.github/workflows/release-reusable.yml
@@ -163,6 +163,7 @@ jobs:
     needs: prepare
     if: needs.prepare.outputs.should_release == 'true' && inputs.skip_tests != true
     runs-on: ubuntu-latest
+    continue-on-error: true  # Tests are advisory — don't block releases
     steps:
       - uses: actions/checkout@v4
 
@@ -221,7 +222,7 @@ jobs:
     if: |
       always() &&
       needs.prepare.outputs.should_release == 'true' &&
-      (needs.test.result == 'success' || needs.test.result == 'skipped')
+      needs.prepare.result == 'success'
     runs-on: ubuntu-latest
     outputs:
       tag: v${{ needs.prepare.outputs.new_version }}
